# Koehon-Studio

./: .gitignore  README.md  design.md  index.html  package.json  pnpm-lock.yaml  requirements.md  tasks.md  tsconfig.json  vite.config.ts
.github/workflows/: windows-build.yml
docs/: MOSS_PIPELINE.md
native-tts/: Cargo.toml
native-tts-python/: README.md  requirements.txt  server.py
native-tts/src/: main.rs
native-tts/src/engine/: mod.rs  moss_onnx.rs  moss_tts_nano.rs  test_tone.rs  tokenizer.rs
samples/: long-form.md  memo-only.md  multi-chapter.md  pause-showcase.md  sample-manuscript.md
scripts/: build-sidecar.mjs  bundle-python.mjs  ensure-python-runtime.mjs
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/api/: audioFiles.ts  errors.test.ts  errors.ts  fileAccess.ts  modelDownloader.ts  settingsPersistence.ts  sidecarManager.test.ts  sidecarManager.ts  ttsClient.ts
src/lib/manuscript/: chunker.test.ts  chunker.ts  normalizer.test.ts  normalizer.ts  parser.test.ts  parser.ts  tags.test.ts  tags.ts
src/lib/project/: projectPersistence.test.ts  projectPersistence.ts  projectTypes.ts
src/lib/prompt/: promptTemplates.test.ts  promptTemplates.ts
src/lib/stores/: appSettings.test.ts  appSettings.ts  generationQueue.test.ts  generationQueue.ts  manuscriptStore.ts  projectStore.ts  recentFiles.ts  recentProjects.ts
