[package]
name = "koehon-tts-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }
ort-sys = "=2.0.0-rc.10"
ndarray = "0.16"
thiserror = "1"
sentencepiece = "0.11"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_pcg = "0.3"
