[package]
name = "koehon-tts-sidecar"
version = "0.2.0"
edition = "2021"

# The Rust binary is now a thin launcher: it locates the bundled Python
# runtime and spawns `python server.py` with the same CLI args Tauri
# previously handed the native ORT-based sidecar. All TTS work (model
# loading, sampling, codec decode, HTTP) moved to native-tts-python/.

[dependencies]
